--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,9 @@
   "dependencies": {
     "angular": "~1.3.11",
     "angular-strap": "~2.1.6",
-    "ui-router": "~0.2.13"
+    "ui-router": "~0.2.13",
+    "es5-shim": "~4.0.6",
+    "json3": "~3.3.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.11"
